@@ -466,7 +466,8 @@
 %_arch			@RPMCANONARCH@
 %_vendor		@RPMCANONVENDOR@
 %_os			@RPMCANONOS@
-%_target_platform	%{_target_cpu}-%{_vendor}-%{_target_os}
+%_gnu			-gnu
+%_target_platform	%{_target_cpu}-%{_vendor}-%{_target_os}%{?_gnu}
 
 #
 # Define a generic value for optflags. Normally overridden by per-target macros.
@@ -707,7 +708,8 @@ CXXFLAGS="${CXXFLAGS:-%optflags}" ; export CXXFLAGS ; \
 FFLAGS="${FFLAGS:-%optflags}" ; export FFLAGS ; \
 %{?__libtoolize:[ -f configure.in ] && %{__libtoolize} --copy --force ;} \
 ./configure \\\
-	--target=%{_target_platform} \\\
+	%{?_gnu: --host=%{_host} --target=%{_target_platform}} \\\
+	%{!?_gnu: %{_target_platform}} \\\
  	--prefix=%{_prefix} \\\
 	--exec-prefix=%{_exec_prefix} \\\
 	--bindir=%{_bindir} \\\
@@ -720,7 +722,6 @@ FFLAGS="${FFLAGS:-%optflags}" ; export FFLAGS ; \
 	--localstatedir=%{_localstatedir} \\\
 	--sharedstatedir=%{_sharedstatedir} \\\
 	--mandir=%{_mandir} \\\
-	--host=%{_host} \\\
 	--infodir=%{_infodir}
 
 #------------------------------------------------------------------------------
